--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="asset/css/style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans&family=Poppins&family=Raleway&family=Ubuntu&display=swap" rel="stylesheet" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans&family=Poppins&family=Raleway&family=Ubuntu&display=swap"
+    rel="stylesheet" />
 </head>
 
 <body>
@@ -16,15 +18,14 @@
   <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg bg-white shadow-sm">
     <div class="container">
-      <a class="navbar-brand fw-bold d-flex align-items-center" href="#">
-        <img src="asset/image/logo_jeruk.png" alt="Logo" width="60" class="me-2" />
-        <span class="display-4 fw-bold fs-5">UMKM <br />Kelurahan Jeruk</span>
+      <a class="navbar-brand p-0 m-0 d-flex align-items-center" href="#">
+        <img src="asset/image/logo_umkm_jeruk.png" alt="Logo UMKM" class="logo-navbar" />
       </a>
     </div>
   </nav>
 
   <!-- HERO SECTION -->
-    <section class="hero-section py-5">
+  <section class="hero-section py-5">
     <br>
     <div class="container py-5">
       <div class="row align-items-center">
@@ -34,7 +35,11 @@
             Eksplorasi <span class="highlight-orange">UMKM Lokal</span> yang Berkualitas
           </h1>
           <p class="lead text-muted text-justify">
-            Kelurahan Jeruk merupakan salah satu kelurahan yang terletak di wilayah Surabaya Timur, dikenal sebagai kawasan yang terus berkembang dengan semangat kebersamaan warganya. Wilayah ini memiliki potensi besar di bidang usaha mikro, kecil, dan menengah (UMKM) yang terus didorong melalui kegiatan pemberdayaan ekonomi masyarakat. Dengan lingkungan yang tertata dan masyarakat yang aktif, Kelurahan Jeruk menjadi contoh kawasan yang mendukung pertumbuhan ekonomi lokal sekaligus menjaga nilai-nilai kebudayaan dan gotong royong.
+            Kelurahan Jeruk merupakan salah satu kelurahan yang terletak di wilayah Surabaya Timur, dikenal sebagai
+            kawasan yang terus berkembang dengan semangat kebersamaan warganya. Wilayah ini memiliki potensi besar di
+            bidang usaha mikro, kecil, dan menengah (UMKM) yang terus didorong melalui kegiatan pemberdayaan ekonomi
+            masyarakat. Dengan lingkungan yang tertata dan masyarakat yang aktif, Kelurahan Jeruk menjadi contoh kawasan
+            yang mendukung pertumbuhan ekonomi lokal sekaligus menjaga nilai-nilai kebudayaan dan gotong royong.
           </p>
         </div>
         <div class="col-lg-6 text-center position-relative ps-lg-5">
