--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <div class="col-md-5 col-sm-6">
             <label for="kategori" class="form-label text-center w-100">Kategori UMKM</label>
             <select class="form-select custom-select-arrow" id="kategori">
-              <option value="">Pilih Kategori</option>
+              <option value="">Semua Kategori</option>
               <option value="Kuliner">Kuliner</option>
               <option value="Toko Sembako">Toko Sembako</option>
               <option value="Jasa">Jasa</option>
