--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="asset/css/style.css" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans&family=Poppins&family=Raleway&family=Ubuntu&display=swap"
-    rel="stylesheet" />
 </head>
 
 <body>
@@ -20,13 +17,34 @@
   <nav class="navbar navbar-expand-lg bg-white shadow-sm">
     <div class="container">
       <a class="navbar-brand p-0 m-0 d-flex align-items-center" href="#">
-        <img src="asset/image/logo_umkm_jeruk.png" alt="Logo UMKM" class="logo-navbar" />
+        <img  href="index.html" src="asset/image/logo_umkm_jeruk.png" alt="Logo UMKM" class="logo-navbar" />
       </a>
+
+      <!-- Tombol hamburger untuk responsif -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!-- Navigasi -->
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link fw-bold " href="#beranda">Beranda</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link fw-bold " href="#umkm">UMKM</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link fw-bold " href="#kontak">Kontak</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </nav>
 
   <!-- HERO SECTION -->
-  <section class="hero-section py-5">
+  <section id="beranda" class="hero-section py-5">
     <br>
     <div class="container py-5">
       <div class="row align-items-center">
@@ -56,7 +74,7 @@
   </section>
 
   <!-- SEARCH SECTION -->
-  <section class="bg-white search-section">
+  <sectioni id="search" class="bg-white search-section">
     <div class="container">
       <form class="search-form mx-auto">
         <div class="mb-4 text-center">
@@ -78,17 +96,28 @@
               <option value="Jasa">Jasa</option>
             </select>
           </div>
-          <div class="col-md-5 col-sm-6">
+          <div class="col-md-5 col-sm-6 mb-3">
             <label for="lokasi" class="form-label text-center w-100">Lokasi</label>
             <input type="text" class="form-control" id="lokasi" placeholder="Contoh: RT 03 RW 02">
           </div>
         </div>
+        <hr>
+        <div class="container">
+          <div class="text-center py-2">
+            <h2 class="fw-bolder mt-3">Kategori UMKM</h2>
+            <p class="text-muted">Kategori UMKM yang tersedia di Kelurahan Jeruk</p>
+          </div>
+          <div class="row g- justify-content-center text-center" id="kategori-populer-container">
+            <!-- Kategori akan ditampilkan oleh JavaScript -->
+          </div>
+        </div>
       </form>
     </div>
-  </section>
+  </sectioni>
+
 
   <!-- SECTION UMKM -->
-  <section class="bg-light py-5">
+  <section id="umkm" class="bg-light py-5">
     <div class="container">
       <div class="text-center mb-5">
         <h2 class="fw-bold">✨ UMKM Unggulan di Kelurahan Jeruk</h2>
@@ -106,7 +135,7 @@
   </section>
 
   <!-- FOOTER -->
-  <footer class="bg-orange text-white pt-5">
+  <footer id="kontak" class="bg-orange text-white pt-5">
     <div class="container">
       <div class="row g-4">
         <div class="col-md-6">
@@ -131,17 +160,30 @@
         <div class="col-md-3">
           <h6 class="fw-semibold mb-3">Navigasi</h6>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-white-50 text-decoration-none d-block mb-1">Beranda</a></li>
-            <li><a href="#" class="text-white-50 text-decoration-none d-block mb-1">UMKM Unggulan</a></li>
-            <li><a href="#" class="text-white-50 text-decoration-none d-block">Kontak</a></li>
+            <li><a href="#beranda" class="text-white-50 text-decoration-none d-block mb-1">Beranda</a></li>
+            <li><a href="#umkm" class="text-white-50 text-decoration-none d-block mb-1">UMKM Unggulan</a></li>
+            <li><a href="#kontak" class="text-white-50 text-decoration-none d-block">Kontak</a></li>
           </ul>
         </div>
         <div class="col-md-3">
           <h6 class="fw-semibold mb-3">Kontak Kami</h6>
           <ul class="list-unstyled text-white-50">
-            <li class="mb-2"><i class="fas fa-map-marker-alt me-2"></i>Kelurahan Jeruk, Lakarsantri</li>
+            <li class="mb-2">
+              <i class="fas fa-map-marker-alt me-2"></i>
+              <a href="https://www.google.com/maps/place/Kelurahan+Jeruk,+Lakarsantri,+Surabaya" 
+                target="_blank" 
+                class="text-white-50 text-decoration-none">
+                Kelurahan Jeruk, Lakarsantri
+              </a>
+            </li>
             <li class="mb-2"><i class="fas fa-envelope me-2"></i>info@umkmjeruk.id</li>
-            <li><i class="fas fa-phone me-2"></i>0812-3456-7890</li>
+            <li><i class="fas fa-phone me-2"></i>
+              <a href="https://wa.me/6281234567890" 
+                target="_blank" 
+                class="text-white-50 text-decoration-none">
+                0812-3456-7890
+              </a>
+             </li>
           </ul>
         </div>
       </div>
@@ -225,6 +267,7 @@
         }
 
         cardElement.innerHTML = `
+      <a href="detail.html?nama_umkm=${umkm.nama_umkm}" class="text-decoration-none text-dark">
       <div class="card shadow-sm border-0 h-100">
         <div class="position-relative">
           <img src="${umkm.image}" class="card-img-top" alt="${umkm.nama_umkm}">
@@ -241,7 +284,8 @@
             </div>
           </div>
         </div>
-      </div>`;
+      </div>
+      <a>`;
 
         container.appendChild(cardElement);
       });
@@ -257,6 +301,43 @@
         });
       }, 100);
     }
+
+    // Fungsi untuk menghitung dan menampilkan kategori populer
+    function tampilkanKategoriPopuler(data) {
+      const container = document.getElementById('kategori-populer-container');
+      if (!container) return;
+
+      container.innerHTML = '';
+
+      const kategoriMap = {};
+
+      data.forEach(umkm => {
+        const kategori = umkm.kategori;
+        kategoriMap[kategori] = (kategoriMap[kategori] || 0) + 1;
+      });
+
+      const sortedKategori = Object.entries(kategoriMap).sort((a, b) => b[1] - a[1]);
+
+      sortedKategori.forEach(([kategori, jumlah]) => {
+        const col = document.createElement('div');
+        col.className = 'col-md-4 col-lg-3';
+
+        col.innerHTML = `
+          <div class="card h-100 border-0 shadow-sm hover-shadow text-center p-4 rounded-4 bg-white">
+            <span class="fw-bolder mb-2">${kategori}</span>
+            <div class="mx-auto">
+              <div class="bg-orange text-white rounded-circle d-inline-flex justify-content-center align-items-center"
+                  style="width: 60px; height: 60px; font-size: 20px;">
+                ${jumlah}
+              </div>
+            </div>
+          </div>
+
+        `;
+        container.appendChild(col);
+      });
+    }
+
 
     // Enhanced intersection observer for scroll-triggered animations
     function setupScrollAnimations() {
@@ -291,6 +372,7 @@
         .then(data => {
           dataUMKM = data;
           renderUMKM(dataUMKM);
+          tampilkanKategoriPopuler(dataUMKM);
 
           // Setup scroll animations after cards are rendered
           setTimeout(() => {
@@ -324,24 +406,30 @@
       const keyword = document.getElementById('keyword').value.trim().toLowerCase();
 
       const filtered = dataUMKM.filter(umkm => {
-        const umkmKategori = umkm.kategori.toLowerCase();
-        const umkmLokasi = umkm.lokasi.toLowerCase();
-        const umkmNama = umkm.nama_umkm.toLowerCase();
-        const umkmPemilik = umkm.pemilik.toLowerCase();
-        const umkmProduk = umkm.produk.toLowerCase();
+        const umkmKategori = (umkm.kategori || '').toLowerCase();
+        const umkmLokasi = (umkm.lokasi || '').toLowerCase();
+        const umkmNama = (umkm.nama_umkm || '').toLowerCase();
+        const umkmPemilik = (umkm.pemilik || '').toLowerCase();
+
+        // Ubah produk jadi string gabungan nama-nama produk
+        const umkmProdukList = Array.isArray(umkm.produk)
+          ? umkm.produk.map(p => (p.nama || '').toLowerCase()).join(' ')
+          : (umkm.produk || '').toLowerCase();
 
         const matchKategori = kategori === '' || umkmKategori === kategori.toLowerCase();
         const matchLokasi = lokasi === '' || umkmLokasi.includes(lokasi);
         const matchKeyword = keyword === '' ||
           umkmNama.includes(keyword) ||
           umkmPemilik.includes(keyword) ||
-          umkmProduk.includes(keyword);
+          umkmProdukList.includes(keyword);
 
         return matchKategori && matchLokasi && matchKeyword;
       });
 
       renderUMKM(filtered);
+      tampilkanKategoriPopuler(dataUMKM);
     }
+
 
     // Inisialisasi
     document.addEventListener('DOMContentLoaded', () => {
