--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <nav class="navbar navbar-expand-lg bg-white shadow-sm">
     <div class="container">
       <a class="navbar-brand p-0 m-0 d-flex align-items-center" href="#">
-        <img  href="index.html" src="asset/image/logo_umkm_jeruk.png" alt="Logo UMKM" class="logo-navbar" />
+        <img href="index.html" src="asset/image/logo_umkm_jeruk.png" alt="Logo UMKM" class="logo-navbar" />
       </a>
 
       <!-- Tombol hamburger untuk responsif -->
@@ -170,20 +170,17 @@
           <ul class="list-unstyled text-white-50">
             <li class="mb-2">
               <i class="fas fa-map-marker-alt me-2"></i>
-              <a href="https://www.google.com/maps/place/Kelurahan+Jeruk,+Lakarsantri,+Surabaya" 
-                target="_blank" 
+              <a href="https://www.google.com/maps/place/Kelurahan+Jeruk,+Lakarsantri,+Surabaya" target="_blank"
                 class="text-white-50 text-decoration-none">
                 Kelurahan Jeruk, Lakarsantri
               </a>
             </li>
             <li class="mb-2"><i class="fas fa-envelope me-2"></i>info@umkmjeruk.id</li>
             <li><i class="fas fa-phone me-2"></i>
-              <a href="https://wa.me/6281234567890" 
-                target="_blank" 
-                class="text-white-50 text-decoration-none">
+              <a href="https://wa.me/6281234567890" target="_blank" class="text-white-50 text-decoration-none">
                 0812-3456-7890
               </a>
-             </li>
+            </li>
           </ul>
         </div>
       </div>
