--- a/index.html
+++ b/index.html
@@ -88,13 +88,18 @@
 
         <div class="row g-3 justify-content-center">
           <div class="col-md-5 col-sm-6">
-            <label for="kategori" class="form-label text-center w-100">Kategori UMKM</label>
-            <select class="form-select custom-select-arrow" id="kategori">
-              <option value="">Semua Kategori</option>
-              <option value="Kuliner">Kuliner</option>
-              <option value="Toko Sembako">Toko Sembako</option>
-              <option value="Jasa">Jasa</option>
-            </select>
+            <label for="kategori" class="form-label text-center w-100">
+              <span class="dropdown-icon">📋</span>
+              Kategori UMKM
+            </label>
+            <div class="custom-select-wrapper">
+              <select class="form-select custom-select-arrow" id="kategori">
+                <option value="">Semua Kategori</option>
+                <option value="Kuliner">Kuliner</option>
+                <option value="Toko Sembako">Toko Sembako</option>
+                <option value="Jasa">Jasa</option>
+              </select>
+            </div>
           </div>
           <div class="col-md-5 col-sm-6 mb-3">
             <label for="lokasi" class="form-label text-center w-100">Lokasi</label>
@@ -171,13 +176,14 @@
             <li class="mb-2">
               <i class="fas fa-map-marker-alt me-2"></i>
               <a href="https://www.google.com/maps/place/Kelurahan+Jeruk,+Lakarsantri,+Surabaya" target="_blank"
-                class="text-white-50 text-decoration-none">
+                rel="noopener"> class="text-white-50 text-decoration-none">
                 Kelurahan Jeruk, Lakarsantri
               </a>
             </li>
             <li class="mb-2"><i class="fas fa-envelope me-2"></i>info@umkmjeruk.id</li>
             <li><i class="fas fa-phone me-2"></i>
-              <a href="https://wa.me/6281234567890" target="_blank" class="text-white-50 text-decoration-none">
+              <a href="https://wa.me/6281234567890" target="_blank" rel="noopener noreferrer"
+                class="text-white-50 text-decoration-none">
                 0812-3456-7890
               </a>
             </li>
