--- a/index.html
+++ b/index.html
@@ -65,21 +65,28 @@
           </p>
         </div>
         <div class="col-lg-6 text-center position-relative ps-lg-5 ">
-          <div id="carouselExampleIndicators" class="carousel slide shadow-orange rounded-4 overflow-hidden" data-bs-ride="carousel" data-bs-interval="2000">
+          <div id="carouselExampleIndicators" class="carousel slide shadow-orange rounded-4 overflow-hidden"
+            data-bs-ride="carousel" data-bs-interval="2000">
             <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="asset/image/umkm.jpg" class="d-block w-100 rounded-4" alt="First slide" style="object-fit: cover; height: 400px;">
+                <img src="asset/image/umkm.jpg" class="d-block w-100 rounded-4" alt="First slide"
+                  style="object-fit: cover; height: 400px;">
               </div>
               <div class="carousel-item">
-                <img src="asset/image/umkm1.jpg" class="d-block w-100 rounded-4" alt="Second slide" style="object-fit: cover; height: 400px;">
+                <img src="asset/image/umkm1.jpg" class="d-block w-100 rounded-4" alt="Second slide"
+                  style="object-fit: cover; height: 400px;">
               </div>
               <div class="carousel-item">
-                <img src="asset/image/umkm2.jpg" class="d-block w-100 rounded-4" alt="Third slide" style="object-fit: cover; height: 400px;">
+                <img src="asset/image/umkm2.jpg" class="d-block w-100 rounded-4" alt="Third slide"
+                  style="object-fit: cover; height: 400px;">
               </div>
             </div>
           </div>
@@ -191,8 +198,7 @@
             <li class="mb-2">
               <i class="fas fa-map-marker-alt me-2"></i>
               <a href="https://www.google.com/maps/place/Kelurahan+Jeruk,+Lakarsantri,+Surabaya" target="_blank"
-                rel="noopener"
-                class="text-white-50 text-decoration-none"> 
+                rel="noopener" class="text-white-50 text-decoration-none">
                 Kelurahan Jeruk, Lakarsantri
               </a>
             </li>
