--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   </section>
 
   <!-- SEARCH SECTION -->
-  <sectioni id="search" class="bg-white search-section">
+  <section id="search" class="search-section">
     <div class="container">
       <form class="search-form mx-auto">
         <div class="mb-4 text-center">
@@ -128,19 +128,33 @@
             <input type="text" class="form-control" id="lokasi" placeholder="Contoh: RT 03 RW 02">
           </div>
         </div>
+
         <hr>
+
+        <!-- TOTAL UMKM CARD -->
+        <div class="total-umkm-card">
+          <div class="total-umkm-content">
+            <div class="total-umkm-icon">🏪</div>
+            <h1 class="total-umkm-number" id="total-umkm-count">0</h1>
+            <div class="total-umkm-label">Total UMKM Terdaftar</div>
+            <div class="total-umkm-description">
+              UMKM yang terdaftar dan aktif di Kelurahan Jeruk
+            </div>
+          </div>
+        </div>
+
         <div class="container">
           <div class="text-center py-2">
             <h2 class="fw-bolder mt-3">Kategori UMKM</h2>
             <p class="text-muted">Kategori UMKM yang tersedia di Kelurahan Jeruk</p>
           </div>
-          <div class="row g- justify-content-center text-center" id="kategori-populer-container">
+          <div class="row g-3 justify-content-center text-center" id="kategori-populer-container">
             <!-- Kategori akan ditampilkan oleh JavaScript -->
           </div>
         </div>
       </form>
     </div>
-  </sectioni>
+  </section>
 
 
   <!-- SECTION UMKM -->
@@ -221,119 +235,62 @@
   </footer>
 
   <script>
-    // Smooth animations on scroll
-    window.addEventListener('scroll', function () {
-      const navbar = document.querySelector('.navbar');
-      if (window.scrollY > 50) {
-        navbar.style.boxShadow = '0 4px 20px rgba(0, 0, 0, 0.1)';
-      } else {
-        navbar.style.boxShadow = '0 2px 10px rgba(0, 0, 0, 0.1)';
-      }
-    });
-
-    // Form enhancements
-    document.querySelectorAll('.form-control, .form-select').forEach(input => {
-      input.addEventListener('focus', function () {
-        this.style.transform = 'translateY(-2px)';
-      });
-
-      input.addEventListener('blur', function () {
-        this.style.transform = 'translateY(0)';
-      });
-    });
-
-    // Search button enhancement
-    document.querySelector('.btn-orange').addEventListener('click', function (e) {
-      e.preventDefault();
-
-      const btn = this;
-      const originalText = btn.textContent;
-
-      btn.textContent = 'Mencari...';
-      btn.style.transform = 'translateY(-2px)';
-
-      setTimeout(() => {
-        btn.textContent = originalText;
-        btn.style.transform = 'translateY(0)';
-      }, 2000);
-    });
-
     let dataUMKM = [];
 
-    // Fungsi render kartu UMKM
-    // Enhanced render function with mobile-specific sequential reveal
-    function renderUMKM(data) {
-      const container = document.getElementById('umkm-container');
-      container.innerHTML = '';
+    // Navbar scroll effect
+    window.addEventListener('scroll', () => {
+      const navbar = document.querySelector('.navbar');
+      navbar.style.boxShadow = window.scrollY > 50
+        ? '0 4px 20px rgba(0, 0, 0, 0.1)'
+        : '0 2px 10px rgba(0, 0, 0, 0.1)';
+    });
 
-      if (data.length === 0) {
-        container.innerHTML = `<div class="col-12 text-center py-5"><h5 class="text-muted">Tidak ada data yang cocok.</h5></div>`;
-        return;
-      }
+    // Form input animation
+    document.querySelectorAll('.form-control, .form-select').forEach(input => {
+      input.addEventListener('focus', () => input.style.transform = 'translateY(-2px)');
+      input.addEventListener('blur', () => input.style.transform = 'translateY(0)');
+    });
 
-      // Check if mobile device
-      const isMobile = window.innerWidth <= 768;
-
-      data.forEach((umkm, index) => {
-        // Create card element
-        const cardElement = document.createElement('div');
-
-        // Mobile: Single column with staggered timing
-        if (isMobile) {
-          cardElement.className = 'col-12 card-loading';
-          // Increased delay for mobile to create nice sequential effect
-          const delay = index * 0.2; // 200ms between each card
-          cardElement.style.animationDelay = `${delay}s`;
-        } else {
-          // Desktop: 3 columns with shorter delays
-          cardElement.className = 'col-md-6 col-lg-4 card-loading';
-          const delay = index * 0.1;
-          cardElement.style.animationDelay = `${delay}s`;
-        }
-
-        cardElement.innerHTML = `
-      <a href="detail.html?nama_umkm=${umkm.nama_umkm}" class="text-decoration-none text-dark">
-      <div class="card shadow-sm border-0 h-100">
-        <div class="position-relative">
-          <img src="${umkm.image}" class="card-img-top" alt="${umkm.nama_umkm}">
-        </div>
-        <div class="card-body">
-          <h5 class="card-title fw-bold">${umkm.nama_umkm}</h5>
-          <div class="d-flex align-items-center mt-3">
-            <div>
-              <div class="fw-semibold">${umkm.pemilik}</div>
-              <small class="text-muted">${umkm.lokasi}</small>
-            </div>
-            <div class="ms-auto text-end">
-              <span class="badge rounded-pill bg-orange text-white mb-1">${umkm.kategori}</span>
-            </div>
-          </div>
-        </div>
-      </div>
-      <a>`;
-
-        container.appendChild(cardElement);
+    // Search button animation & filter trigger
+    const searchBtn = document.querySelector('.btn-orange');
+    if (searchBtn) {
+      searchBtn.addEventListener('click', e => {
+        e.preventDefault();
+        const originalText = searchBtn.textContent;
+        searchBtn.textContent = 'Mencari...';
+        searchBtn.style.transform = 'translateY(-2px)';
+        setTimeout(() => {
+          searchBtn.textContent = originalText;
+          searchBtn.style.transform = 'translateY(0)';
+          filterUMKM();
+        }, 1000);
       });
-
-      // Trigger sequential reveal animation
-      setTimeout(() => {
-        const cards = container.querySelectorAll('.card-loading');
-        cards.forEach((card, index) => {
-          setTimeout(() => {
-            card.classList.remove('card-loading');
-            card.classList.add('fade-in');
-          }, index * (isMobile ? 200 : 100)); // Staggered timing
-        });
-      }, 100);
     }
 
-    // Fungsi untuk menghitung dan menampilkan kategori populer
+    // Tampilkan total UMKM dengan animasi count-up
+    function tampilkanTotalUMKM(data) {
+      const totalElement = document.getElementById('total-umkm-count');
+      if (!totalElement) return;
+
+      const totalCount = data.length;
+      let current = 0;
+      const increment = totalCount / 30;
+      const timer = setInterval(() => {
+        current += increment;
+        if (current >= totalCount) {
+          current = totalCount;
+          clearInterval(timer);
+        }
+        totalElement.textContent = Math.floor(current);
+      }, 50);
+    }
+
+    // Tampilkan kategori populer dengan emoji
     function tampilkanKategoriPopuler(data) {
       const container = document.getElementById('kategori-populer-container');
       if (!container) return;
 
       container.innerHTML = '';
-
       const kategoriMap = {};
 
       data.forEach(umkm => {
@@ -343,92 +300,84 @@
 
       const sortedKategori = Object.entries(kategoriMap).sort((a, b) => b[1] - a[1]);
 
-      sortedKategori.forEach(([kategori, jumlah]) => {
+      sortedKategori.forEach(([kategori, jumlah], index) => {
         const col = document.createElement('div');
         col.className = 'col-md-4 col-lg-3';
+        col.style.animationDelay = `${index * 0.2}s`;
+
+        const icon = {
+          'Kuliner': '🍽️',
+          'Retail': '🛍️',
+          'Jasa': '🔧'
+        }[kategori] || '🏪';
 
         col.innerHTML = `
-          <div class="card h-100 border-0 shadow-sm hover-shadow text-center p-4 rounded-4 bg-white">
-            <span class="fw-bolder mb-2">${kategori}</span>
-            <div class="mx-auto">
-              <div class="bg-orange text-white rounded-circle d-inline-flex justify-content-center align-items-center fw-bold"
-                  style="width: 60px; height: 60px; font-size: 20px;">
-                ${jumlah}
-              </div>
-            </div>
-          </div>
-
-        `;
+        <div class="category-card">
+          <div class="category-count">${jumlah}</div>
+          <div class="category-name">${icon} ${kategori}</div>
+          <div class="category-subtitle">${jumlah} UMKM aktif</div>
+        </div>
+      `;
         container.appendChild(col);
       });
     }
 
+    // Render UMKM card
+    function renderUMKM(data) {
+      const container = document.getElementById('umkm-container');
+      if (!container) return;
 
-    // Enhanced intersection observer for scroll-triggered animations
-    function setupScrollAnimations() {
-      const observerOptions = {
-        root: null,
-        rootMargin: '0px 0px -100px 0px',
-        threshold: 0.1
-      };
+      container.innerHTML = data.length
+        ? ''
+        : `<div class="col-12 text-center py-5"><h5 class="text-muted">Tidak ada data yang cocok.</h5></div>`;
 
-      const observer = new IntersectionObserver((entries) => {
-        entries.forEach(entry => {
-          if (entry.isIntersecting) {
-            const card = entry.target;
-            if (card.classList.contains('card-loading')) {
-              card.classList.remove('card-loading');
-              card.classList.add('fade-in');
-            }
-          }
-        });
-      }, observerOptions);
+      const isMobile = window.innerWidth <= 768;
 
-      // Observe all cards
-      document.querySelectorAll('.card-loading').forEach(card => {
-        observer.observe(card);
+      data.forEach((umkm, i) => {
+        const delay = isMobile ? i * 0.2 : i * 0.1;
+        const card = document.createElement('div');
+        card.className = isMobile ? 'col-12 card-loading' : 'col-md-6 col-lg-4 card-loading';
+        card.style.animationDelay = `${delay}s`;
+
+        card.innerHTML = `
+        <a href="detail.html?nama_umkm=${umkm.nama_umkm}" class="text-decoration-none text-dark">
+          <div class="card shadow-sm border-0 h-100">
+            <div class="position-relative">
+              <img src="${umkm.image}" class="card-img-top" alt="${umkm.nama_umkm}">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title fw-bold">${umkm.nama_umkm}</h5>
+              <div class="d-flex align-items-center mt-3">
+                <div>
+                  <div class="fw-semibold">${umkm.pemilik}</div>
+                  <small class="text-muted">${umkm.lokasi}</small>
+                </div>
+                <div class="ms-auto text-end">
+                  <span class="badge rounded-pill bg-orange text-white mb-1">${umkm.kategori}</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </a>`;
+        container.appendChild(card);
       });
+
+      // Animation reveal
+      setTimeout(() => {
+        container.querySelectorAll('.card-loading').forEach((card, i) => {
+          setTimeout(() => {
+            card.classList.remove('card-loading');
+            card.classList.add('fade-in');
+          }, i * (isMobile ? 200 : 100));
+        });
+      }, 100);
     }
 
-    // Update the main initialization
-    document.addEventListener('DOMContentLoaded', () => {
-      fetch('data_umkm.json')
-        .then(response => response.json())
-        .then(data => {
-          dataUMKM = data;
-          renderUMKM(dataUMKM);
-          tampilkanKategoriPopuler(dataUMKM);
-
-          // Setup scroll animations after cards are rendered
-          setTimeout(() => {
-            setupScrollAnimations();
-          }, 500);
-        })
-        .catch(error => {
-          console.error('Gagal memuat data UMKM:', error);
-          document.getElementById('umkm-container').innerHTML = `
-        <div class="col-12 text-center py-5 text-danger">
-          <h5>Gagal memuat data UMKM.</h5>
-          <p>${error.message}</p>
-        </div>`;
-        });
-
-      // Rest of your existing event listeners...
-      document.querySelector('form').addEventListener('submit', function (e) {
-        e.preventDefault();
-        filterUMKM();
-      });
-
-      document.getElementById('kategori').addEventListener('change', filterUMKM);
-      document.getElementById('lokasi').addEventListener('input', filterUMKM);
-      document.getElementById('keyword').addEventListener('input', filterUMKM);
-    });
-
-    // Enhanced filter function with re-animation
+    // Filter UMKM berdasarkan input
     function filterUMKM() {
-      const kategori = document.getElementById('kategori').value.trim();
-      const lokasi = document.getElementById('lokasi').value.trim().toLowerCase();
-      const keyword = document.getElementById('keyword').value.trim().toLowerCase();
+      const kategori = document.getElementById('kategori')?.value.trim().toLowerCase() || '';
+      const lokasi = document.getElementById('lokasi')?.value.trim().toLowerCase() || '';
+      const keyword = document.getElementById('keyword')?.value.trim().toLowerCase() || '';
 
       const filtered = dataUMKM.filter(umkm => {
         const umkmKategori = (umkm.kategori || '').toLowerCase();
@@ -436,63 +385,54 @@
         const umkmNama = (umkm.nama_umkm || '').toLowerCase();
         const umkmPemilik = (umkm.pemilik || '').toLowerCase();
 
-        // Ubah produk jadi string gabungan nama-nama produk
-        const umkmProdukList = Array.isArray(umkm.produk)
+        const produk = Array.isArray(umkm.produk)
           ? umkm.produk.map(p => (p.nama || '').toLowerCase()).join(' ')
           : (umkm.produk || '').toLowerCase();
 
-        const matchKategori = kategori === '' || umkmKategori === kategori.toLowerCase();
-        const matchLokasi = lokasi === '' || umkmLokasi.includes(lokasi);
-        const matchKeyword = keyword === '' ||
-          umkmNama.includes(keyword) ||
-          umkmPemilik.includes(keyword) ||
-          umkmProdukList.includes(keyword);
+        const matchKategori = !kategori || umkmKategori === kategori;
+        const matchLokasi = !lokasi || umkmLokasi.includes(lokasi);
+        const matchKeyword = !keyword || [umkmNama, umkmPemilik, produk].some(str => str.includes(keyword));
 
         return matchKategori && matchLokasi && matchKeyword;
       });
 
       renderUMKM(filtered);
-      tampilkanKategoriPopuler(dataUMKM);
+      tampilkanTotalUMKM(filtered);
+      tampilkanKategoriPopuler(dataUMKM); // tetap semua kategori, bukan filtered
     }
 
-
-    // Inisialisasi
+    // Inisialisasi saat halaman siap
     document.addEventListener('DOMContentLoaded', () => {
       fetch('data_umkm.json')
-        .then(response => response.json())
+        .then(res => res.json())
         .then(data => {
           dataUMKM = data;
           renderUMKM(dataUMKM);
+          tampilkanTotalUMKM(dataUMKM);
+          tampilkanKategoriPopuler(dataUMKM);
         })
-        .catch(error => {
-          console.error('Gagal memuat data UMKM:', error);
+        .catch(err => {
+          console.error('Gagal memuat data UMKM:', err);
           document.getElementById('umkm-container').innerHTML = `
-              <div class="col-12 text-center py-5 text-danger">
-                <h5>Gagal memuat data UMKM.</h5>
-                <p>${error.message}</p>
-              </div>`;
+          <div class="col-12 text-center py-5 text-danger">
+            <h5>Gagal memuat data UMKM.</h5>
+            <p>${err.message}</p>
+          </div>`;
         });
 
-      // Event listener
-      document.querySelector('form').addEventListener('submit', function (e) {
+      // Filter listeners
+      document.getElementById('kategori')?.addEventListener('change', filterUMKM);
+      document.getElementById('lokasi')?.addEventListener('input', filterUMKM);
+      document.getElementById('keyword')?.addEventListener('input', filterUMKM);
+
+      // Optional: back to top
+      document.querySelector('.back-to-top')?.addEventListener('click', e => {
         e.preventDefault();
-        filterUMKM();
+        window.scrollTo({ top: 0, behavior: 'smooth' });
       });
-
-      document.getElementById('kategori').addEventListener('change', filterUMKM);
-      document.getElementById('lokasi').addEventListener('input', filterUMKM);
-      document.getElementById('keyword').addEventListener('input', filterUMKM);
-
-      // Back to top opsional
-      const backToTop = document.querySelector('.back-to-top');
-      if (backToTop) {
-        backToTop.addEventListener('click', function (e) {
-          e.preventDefault();
-          window.scrollTo({ top: 0, behavior: 'smooth' });
-        });
-      }
     });
   </script>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
